JumpScript/tests/baselines/reference/reExportUndefined1.errors.txt
tests/cases/compiler/a.jump(1,10): error TS2661: Cannot export 'undefined'. Only local declarations can be exported from a module.


==== tests/cases/compiler/a.jump (1 errors) ====
    export { undefined };
             ~~~~~~~~~
!!! error TS2661: Cannot export 'undefined'. Only local declarations can be exported from a module.